--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,9 @@ if (OPENMP_FOUND)
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif ()
 
-add_executable(LogsPicking main.cpp PollardRho/PollardRho.cpp PollardRho/PollardRho.h DiscreteLog.h WeinerKangaroo/WeinerKangaroo.cpp WeinerKangaroo/WeinerKangaroo.h PohlingHellman/PohlingHellman.cpp PohlingHellman/PohlingHellman.h)
+add_executable(LogsPicking main.cpp PollardRho/PollardRho.cpp PollardRho/PollardRho.h DiscreteLog.h
+        WeinerKangaroo/WeinerKangaroo.cpp WeinerKangaroo/WeinerKangaroo.h
+        PohlingHellman/PohlingHellman.cpp PohlingHellman/PohlingHellman.h
+        Support/pollard_rho_dlp.cpp Support/pollard_rho_dlp.hpp Support/utilities.cpp Support/utilities.hpp)
 
 target_link_libraries(LogsPicking ntl m gmp)
